
syntax = "proto3";
package data;

message Gps {
    double degrees = 1;
}

message BusStop {
    Gps latitude = 1;
    Gps longitude = 2;
    optional string stop_name = 3;
}

message BusRoute {
    repeated BusStop routes = 1;
}

message BusGroup {
    repeated BusRoute groups = 1;
}